update logic a bit
