# src/generated/resources/openapi.json
@@ -266,6 +266,68 @@
             "description" : "No Content"
           }
         }
+      },
+      "patch" : {
+        "tags" : [ "Connections Resource" ],
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/ConnectionSpec"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "Connection updated with PATCH",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Connection"
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "Connection not found",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Failure"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Could not authenticate with connection configuration updated with PATCH",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Failure"
+                }
+              }
+            }
+          },
+          "400" : {
+            "description" : "Invalid input",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Failure"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/gateway/v1/feature-flags/{id}/value" : {
@@ -1602,12 +1664,12 @@
             "enum" : [ "UP", "DOWN" ],
             "type" : "string"
           },
+          "name" : {
+            "type" : "string"
+          },
           "data" : {
             "type" : "object",
             "nullable" : true
-          },
-          "name" : {
-            "type" : "string"
           }
         }
       }
